--- a/environment.yml
+++ b/environment.yml
@@ -24,7 +24,7 @@ dependencies:
     # Dev dependencies (style checks)
     - black
     - blackdoc
-    - docformatter>=1.5.0
+    - docformatter>=1.5.0,<1.6.0
     - flakeheaven>=3
     - isort>=5
     - pylint
