Pin pandas to <2.0

--- a/.github/workflows/ci_docs.yml
+++ b/.github/workflows/ci_docs.yml
@@ -70,7 +70,7 @@ jobs:
       # Install GMT and other required dependencies from conda-forge
       - name: Install dependencies
         run: |
-          mamba install gmt=6.4.0 numpy pandas xarray netCDF4 packaging \
+          mamba install gmt=6.4.0 numpy 'pandas<2.0' xarray netCDF4 packaging \
                         build ipython make myst-parser contextily geopandas rioxarray \
                         sphinx sphinx-copybutton sphinx-design sphinx-gallery sphinx_rtd_theme
 
