--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -91,7 +91,7 @@ jobs:
       - name: Install dependencies
         run: |
           mamba install gmt=6.4.0 numpy=${{ matrix.numpy-version }} \
-                        pandas xarray netCDF4 packaging \
+                        'pandas<2.0' xarray netCDF4 packaging \
                         ${{ matrix.optional-packages }} \
                         build dvc make 'pytest>=6.0' \
                         pytest-cov pytest-doctestplus pytest-mpl sphinx-gallery
