--- a/ci/requirements/tests_legacy.yml
+++ b/ci/requirements/tests_legacy.yml
@@ -5,7 +5,7 @@ channels:
 dependencies:
     # Required dependencies
     - pip
-    - gmt=6.3.0
+    - gmt
     - numpy>=1.21
     - pandas
     - xarray
