--- a/.github/workflows/ci_doctests.yaml
+++ b/.github/workflows/ci_doctests.yaml
@@ -12,19 +12,12 @@ on:
 
 jobs:
   test:
-    name: ${{ matrix.os }} - Python ${{ matrix.python-version }} / NumPy ${{ matrix.numpy-version }}
+    name: ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.9', '3.11']
         os: [ubuntu-latest, macOS-latest, windows-latest]
-        # Pair Python 3.9 with NumPy 1.21 and Python 3.11 with NumPy 1.24
-        include:
-          - python-version: '3.9'
-            numpy-version: '1.21'
-          - python-version: '3.11'
-            numpy-version: '1.24'
     timeout-minutes: 30
     defaults:
       run:
@@ -49,7 +42,7 @@ jobs:
         uses: conda-incubator/setup-miniconda@v2.2.0
         with:
           activate-environment: pygmt
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.11'
           channels: conda-forge,nodefaults
           channel-priority: strict
           miniforge-version: latest
