--- a/.github/workflows/ci_doctests.yaml
+++ b/.github/workflows/ci_doctests.yaml
@@ -5,7 +5,7 @@ name: Doctests
 on:
   # push:
   #   branches: [ main ]
-  pull_request:
+  # pull_request:
   # Schedule weekly tests on Sunday
   schedule:
     - cron: '0 0 * * 0'
