--- a/.github/workflows/ci_tests_dev.yaml
+++ b/.github/workflows/ci_tests_dev.yaml
@@ -1,6 +1,7 @@
-# Tests PyGMT with GMT dev version on Linux/macOS/Windows
+# Test PyGMT with GMT dev version on Linux/macOS/Windows
 #
-# This workflow runs regular PyGMT tests with the GMT dev version.
+# This workflow runs regular PyGMT tests with the GMT dev version, and also
+# pre-release versions of several dependencies like NumPy, Pandas, Xarray, etc.
 # If any tests fail, it also uploads the diff images as workflow artifacts.
 # On Linux/macOS, GMT dev version is installed by fetching the latest source
 # codes from the GMT master branch and compiling.
@@ -119,6 +120,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --pre --prefer-binary \
+                        --extra-index https://pypi.anaconda.org/scientific-python-nightly-wheels/simple \
                         numpy pandas xarray netCDF4 packaging \
                         build contextily dvc geopandas ipython rioxarray \
                         'pytest>=6.0' pytest-cov pytest-doctestplus pytest-mpl \
