--- a/.github/workflows/format-command.yml
+++ b/.github/workflows/format-command.yml
@@ -54,4 +54,4 @@ jobs:
           token: ${{ steps.generate-token.outputs.token }}
           repository: ${{ github.event.client_payload.github.payload.repository.full_name }}
           comment-id: ${{ github.event.client_payload.github.payload.comment.id }}
-          reaction-type: hooray
+          reactions: hooray
