Revert "CI: Pin GMT to a specific build on RTD (#2684)"
This reverts commit e931cb4ab8247d23546d87cbe1ee677909591a63.

--- a/ci/requirements/docs.yml
+++ b/ci/requirements/docs.yml
@@ -4,7 +4,7 @@ channels:
     - nodefaults
 dependencies:
     # Required dependencies
-    - gmt=6.4.0=h4733502_10
+    - gmt=6.4.0
     - numpy>=1.22
     - pandas
     - xarray
