--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -101,6 +101,7 @@ jobs:
             channels:
               - conda-forge
               - nodefaults
+              - conda-forge/label/python_rc
           cache-downloads: true
           cache-environment: true
           create-args: >-
