--- a/.github/workflows/format-command.yml
+++ b/.github/workflows/format-command.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Install formatting tools
         run: |
           python -m pip install black blackdoc docformatter flakeheaven isort
+          python -m pip list
           sudo apt-get install dos2unix
 
       # Run "make format" and commit the change to the PR branch
