--- a/.github/workflows/style_checks.yaml
+++ b/.github/workflows/style_checks.yaml
@@ -35,6 +35,7 @@ jobs:
       - name: Install packages
         run: |
           python -m pip install black blackdoc docformatter flakeheaven pylint isort
+          python -m pip list
           sudo apt-get install dos2unix
 
       - name: Formatting check (black, blackdoc, docformatter, flakeheaven and isort)
