--- a/.github/workflows/format-command.yml
+++ b/.github/workflows/format-command.yml
@@ -32,7 +32,7 @@ jobs:
       # Install formatting tools
       - name: Install formatting tools
         run: |
-          python -m pip install black blackdoc docformatter flakeheaven isort
+          python -m pip install black blackdoc docformatter ruff
           python -m pip list
           sudo apt-get install dos2unix
 
