CI: Pin ghostscript to 9.54.0

--- a/.github/workflows/ci_tests_dev.yaml
+++ b/.github/workflows/ci_tests_dev.yaml
@@ -106,7 +106,7 @@ jobs:
             ninja
             curl
             fftw
-            ghostscript
+            ghostscript=9.54.0
             hdf5
             libblas
             libcblas
