--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -106,6 +106,7 @@ jobs:
           create-args: >-
             python=${{ matrix.python-version }}${{ matrix.optional-packages }}
             gmt=6.4.0
+            ghostscript=9.54.0
             numpy=${{ matrix.numpy-version }}
             pandas
             xarray
