--- a/.github/workflows/ci_docs.yml
+++ b/.github/workflows/ci_docs.yml
@@ -110,7 +110,7 @@ jobs:
             python-build
             myst-nb
             panel
-            sphinx
+            sphinx>=6.2
             sphinx-autodoc-typehints
             sphinx-copybutton
             sphinx-design
