--- a/.github/workflows/ci_doctests.yaml
+++ b/.github/workflows/ci_doctests.yaml
@@ -61,6 +61,7 @@ jobs:
             geopandas
             ipython
             pyarrow
+            rasterio<1.4.3
             rioxarray
             make
             pip
