--- a/.github/workflows/ci_tests_legacy.yaml
+++ b/.github/workflows/ci_tests_legacy.yaml
@@ -71,6 +71,7 @@ jobs:
             geopandas
             ipython
             pyarrow
+            rasterio<1.4.3
             rioxarray
             sphinx-gallery
             make
