--- a/ci/requirements/docs.yml
+++ b/ci/requirements/docs.yml
@@ -17,6 +17,7 @@ dependencies:
     - geopandas<1.0
     - ipython
     - pyarrow
+    - rasterio<1.4.3
     - rioxarray
     # Development dependencies (general)
     - make
