--- a/ci/requirements/docs.yml
+++ b/ci/requirements/docs.yml
@@ -26,7 +26,7 @@ dependencies:
     # Dev dependencies (building documentation)
     - myst-nb
     - panel
-    - sphinx
+    - sphinx>=6.2
     - sphinx-autodoc-typehints
     - sphinx-copybutton
     - sphinx-design
