--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -153,6 +153,9 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
 
+      - name: Setup data version control (DVC)
+        uses: iterative/setup-dvc@v1.1.2
+
       # Pull baseline image data from dvc remote (DAGsHub)
       - name: Pull baseline image data from dvc remote
         run: dvc pull --no-run-cache --verbose && ls -lhR pygmt/tests/baseline/
