Revert "Install dvc via winget on Windows"
This reverts commit 848dd8c6587a23d4084ae17b6cbcc5be57f6a8c2.

--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -158,7 +158,7 @@ jobs:
         if: runner.os != 'Windows'
 
       - name: Setup data version control (DVC) [Windows]
-        run: winget install --id Iterative.DVC
+        run: choco install dvc
         if: runner.os == 'Windows'
 
       # Pull baseline image data from dvc remote (DAGsHub)
