Revert "Install dvc via choco on Windows"
This reverts commit e66e8926deffa5d4a1e3aa56e10da633c71a1cb2.

--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -153,13 +153,8 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
 
-      - name: Setup data version control (DVC) [Unix]
+      - name: Setup data version control (DVC)
         run: python -m pip install dvc
-        if: runner.os != 'Windows'
-
-      - name: Setup data version control (DVC) [Windows]
-        run: choco install dvc
-        if: runner.os == 'Windows'
 
       # Pull baseline image data from dvc remote (DAGsHub)
       - name: Pull baseline image data from dvc remote
