--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -153,8 +153,11 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
 
-      - name: Setup data version control (DVC)
-        run: python -m pip install dvc
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4.2.0
+
+      - name: Install dvc
+        run: uv pip install dvc
 
       # Pull baseline image data from dvc remote (DAGsHub)
       - name: Pull baseline image data from dvc remote
