--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -133,7 +133,6 @@ jobs:
             xarray${{ matrix.xarray-version }}
             netCDF4
             packaging
-            dvc
             make
             pip
             python-build
@@ -154,9 +153,21 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4.2.0
+
+      - name: Install dvc
+        run: |
+          uv venv
+          source .venv/bin/activate
+          uv pip install dvc
+          uv pip list
+
       # Pull baseline image data from dvc remote (DAGsHub)
       - name: Pull baseline image data from dvc remote
-        run: dvc pull --no-run-cache --verbose && ls -lhR pygmt/tests/baseline/
+        run: |
+          source .venv/bin/activate
+          uv run dvc pull --no-run-cache --verbose && ls -lhR pygmt/tests/baseline/
 
       # Install the package that we want to test
       - name: Install the package
