--- a/.github/workflows/ci_docs.yml
+++ b/.github/workflows/ci_docs.yml
@@ -55,7 +55,7 @@ jobs:
         # Is it a draft Pull Request (true or false)?
         isDraft:
           - ${{ github.event.pull_request.draft }}
-        # Only run one job (Ubuntu + Python 3.13) for draft PRs
+        # Only run jobs on Ubuntu for draft PRs
         exclude:
           - os: macos-latest
             isDraft: true
