CI: Install pyarrow-core instead of pyarrow from conda-forge
Reduce unnecessary optional dependencies when installing `pyarrow` from conda-forge. Xref https://github.com/conda-forge/pyarrow-feedstock/pull/111

--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -65,7 +65,7 @@ jobs:
             netCDF4
             packaging
             geopandas
-            pyarrow
+            pyarrow-core
             pytest
             pytest-codspeed
             pytest-mpl
