--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -73,7 +73,7 @@ jobs:
             numpy-version: '1.24'
             pandas-version: '=2.0'
             xarray-version: '=2023.04'
-            optional-packages: ' contextily geopandas<1 ipython pyarrow rioxarray sphinx-gallery'
+            optional-packages: ' contextily geopandas<1 ipython pyarrow-core rioxarray sphinx-gallery'
           # Python 3.13 + core packages (latest versions) + optional packages
           - python-version: '3.13'
             numpy-version: '2.2'
