--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ description = "A Python interface for the Generic Mapping Tools"
 readme = "README.md"
 requires-python = ">=3.11"
 authors = [{name = "The PyGMT Developers", email = "pygmt.team@gmail.com"}]
+license = "BSD-3-Clause"
+license-files = ["LICENSE.txt"]
 keywords = [
     "cartography",
     "geodesy",
@@ -27,7 +29,6 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
-    "License :: OSI Approved :: BSD License",
 ]
 dependencies = [
     "numpy>=1.25",
