--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,7 @@ description = "A Python interface for the Generic Mapping Tools"
 readme = "README.md"
 requires-python = ">=3.11"
 authors = [{name = "The PyGMT Developers", email = "pygmt.team@gmail.com"}]
-license = "BSD-3-Clause"
-license-files = ["LICENSE.txt"]
+license = {text = "BSD-3-Clause"}
 keywords = [
     "cartography",
     "geodesy",
