--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ description = "A Python interface for the Generic Mapping Tools"
 readme = "README.md"
 requires-python = ">=3.11"
 authors = [{name = "The PyGMT Developers", email = "pygmt.team@gmail.com"}]
-license = {text = "BSD-3-Clause"}
+license = "BSD-3-Clause"
+license-files = ["LICENSE.txt"]
 keywords = [
     "cartography",
     "geodesy",
