--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -155,18 +155,17 @@ jobs:
 
       - name: Install uv
         uses: astral-sh/setup-uv@v5.1.0
+        with:
+          python-version: ${{ matrix.python-version }}
 
       - name: Install dvc
         run: |
-          uv venv
-          source .venv/bin/activate
           uv pip install dvc
           uv pip list
 
       # Pull baseline image data from dvc remote (DAGsHub)
       - name: Pull baseline image data from dvc remote
         run: |
-          source .venv/bin/activate
           uv run dvc pull --no-run-cache --verbose && ls -lhR pygmt/tests/baseline/
 
       # Install the package that we want to test
