--- a/.github/workflows/ci_tests_legacy.yaml
+++ b/.github/workflows/ci_tests_legacy.yaml
@@ -80,20 +80,18 @@ jobs:
 
       # Install uv package manager
       - name: Install uv
-        uses: astral-sh/setup-uv@v3
+        uses: astral-sh/setup-uv@v5.1.0
+        with:
+          python-version: 3.11
 
       # Install the package that we want to test
       - name: Install the package
         run: |
-          uv venv
-          source .venv/bin/activate
           uv run --with pip==23 --resolution lowest-direct --all-extras --dev make install
           uv pip list
 
       # Run the tests but skip images
       - name: Run tests
-        run: |
-          source .venv/bin/activate
-          uv run --with pytest==8,pytest-mpl==0.17,pytest-doctestplus==1.2 --resolution lowest-direct --all-extras --dev make test_no_images PYTEST_EXTRA="-r P"
+        run: uv run --with pytest==8,pytest-mpl==0.17,pytest-doctestplus==1.2 --resolution lowest-direct --all-extras --dev make test_no_images PYTEST_EXTRA="-r P"
         env:
           GMT_LIBRARY_PATH: $CONDA_PREFIX/lib
