--- a/pyproject.toml
+++ b/pyproject.toml
@@ -160,7 +160,10 @@ known-third-party = ["pygmt"]
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]  # Ignore `F401` (unused-import) in all `__init__.py` files
 "*/tests/test_*.py" = ["S101"]  # Ignore `S101` (use of assert) in all tests files
-"examples/**/*.py" = ["T201"]  # Allow `print` in examples
+"examples/**/*.py" = [ # Ignore rules in examples
+    "B018",  # Allow useless expressions in Jupyter Notebooks
+    "T201",  # Allow `print` statements
+]
 
 [tool.ruff.lint.pycodestyle]
 max-doc-length = 88
