--- a/environment.yml
+++ b/environment.yml
@@ -44,6 +44,9 @@ dependencies:
     - sphinx-design
     - sphinx-gallery>=0.17.0
     - sphinx_rtd_theme<3.0
+    # Dev dependencies (building PDF documentation)
+    - imagemagick
+    - tectonic
     # Dev dependencies (type hints)
     - mypy
     - pandas-stubs
