--- a/ci/requirements/docs.yml
+++ b/ci/requirements/docs.yml
@@ -32,3 +32,7 @@ dependencies:
     - sphinx-design
     - sphinx-gallery
     - sphinx_rtd_theme<3.0
+    # Dev dependencies (building PDF documentation)
+    - cairosvg
+    - sphinxcontrib-svg2pdfconverter
+    - tectonic
