--- a/environment.yml
+++ b/environment.yml
@@ -45,7 +45,8 @@ dependencies:
     - sphinx-gallery>=0.17.0
     - sphinx_rtd_theme<3.0
     # Dev dependencies (building PDF documentation)
-    - imagemagick
+    - cairosvg
+    - sphinxcontrib-svg2pdfconverter
     - tectonic
     # Dev dependencies (type hints)
     - mypy
