--- a/.github/workflows/format-command.yml
+++ b/.github/workflows/format-command.yml
@@ -8,11 +8,12 @@ on:
   repository_dispatch:
     types: [format-command]
 
-permissions:
-  contents: write
+permissions: {}
 
 jobs:
   format:
+    permissions:
+      contents: write # for Git to git push
     runs-on: ubuntu-latest
     steps:
       # Generate token from GenericMappingTools bot
