--- a/.github/workflows/format-command.yml
+++ b/.github/workflows/format-command.yml
@@ -29,7 +29,7 @@ jobs:
           token: ${{ steps.generate-token.outputs.token }}
           repository: ${{ github.event.client_payload.pull_request.head.repo.full_name }}
           ref: ${{ github.event.client_payload.pull_request.head.ref }}
-          persist-credentials: false
+          persist-credentials: true
 
       # Setup Python environment
       - uses: actions/setup-python@v6.0.0
