--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -36,4 +36,4 @@ jobs:
             * All new features should be documented. It helps to write the docstrings for your functions/classes before writing the code. This will help you think about your code design and results in better code.
             * No matter what, we are really grateful that you put in the effort to do this! 🎉
 
-            After your PR is merged, please open a new pull request to add yourself to the `AUTHORS.md` file. We hope that this was a good experience for you. Let us know if there is any way that the contributing process could be improved.
+            We hope that the contributing process will be a good experience for you. Please let us know if there is any way that it could be improved. After your PR is merged, feel free to open a new pull request to add yourself to the `AUTHORS.md` file. 
