--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -1,4 +1,6 @@
 # Greet first-time contributors.
+#
+# It runs in issues and pull requests from forks.
 
 name: Greet First-Time Contributors
 
@@ -19,6 +21,7 @@ permissions:
 jobs:
   greeting:
     name: Greet First-Time Contributors
+    if: github.event_name == 'issues' || (github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name != github.repository)
     runs-on: ubuntu-latest
 
     steps:
